<resources>
    <string name="app_name">1513195_coursework</string>
    <string name="action_settings">Settings</string>
    <string name="str_update_api">Refresh Data</string>
    <string name="title_activity_user_preferences">User Preferences</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="str_toolbar_title">Here Comes the Sun</string>
    <string name="title">Here Comes the Sun</string>
    <string name="file_user_preferences">file_user_preferences</string>
    <string name="geolocation_api_key">pk.eyJ1IjoiZXNvdXRocmVuIiwiYSI6ImNqb25qZXowOTB3Y24zcHJ5OXVrYnh3enAifQ.SVjlOPcB76-zFNDYGp4ePQ</string>
    <string name="move_preference_view_left"><![CDATA[<]]></string>
    <string name="move_preference_view_right"><![CDATA[>]]></string>
    <string name="search_activity_title">Search Weather</string>
    <string name="search_sort_by">Sort By</string>
    <string name="search_spinner_temperature">Temperature</string>
    <string name="search_less_than">Less Than</string>
    <string name="search_radio_equal">Equal To</string>
    <string name="search_radio_greater_than">Greater Than</string>
    <string name="seach_page_button">Search</string>
    <string name="search_value_string">Value</string>

    <string-array name="search_weather_array">
        <item>Temperature</item>
        <item>Humidity</item>
        <item>Pressure</item>
        <item>Windspeed</item>
        <item>UV Index</item>
        <item>Visibility</item>
    </string-array>
</resources>
