<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchWeather"
    android:background="@color/themeBlue">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:background="@color/themeLightBlue"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:text="@string/search_activity_title"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/search_sort_by"
        android:textSize="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Spinner
        android:id="@+id/search_spinner"
        android:layout_width="221dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.208"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <RadioGroup
        android:id="@+id/RGroup"
        android:layout_width="174dp"
        android:layout_height="111dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <RadioButton
            android:id="@+id/radio_less"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_less_than"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="16dp" />

        <RadioButton
            android:id="@+id/radio_greater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:text="@string/search_radio_greater_than"
            app:layout_constraintStart_toEndOf="@+id/radio_equal"
            tools:layout_editor_absoluteY="16dp" />

        <RadioButton
            android:id="@+id/radio_equal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:text="@string/search_radio_equal"
            app:layout_constraintStart_toEndOf="@+id/radio_less"
            tools:layout_editor_absoluteY="16dp" />
    </RadioGroup>

    <EditText
        android:id="@+id/editText"
        android:layout_width="77dp"
        android:layout_height="73dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Val"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/search_units"
        app:layout_constraintStart_toEndOf="@+id/RGroup"
        app:layout_constraintTop_toBottomOf="@+id/search_spinner" />

    <TextView
        android:id="@+id/search_units"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="TextView"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="173dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/main_screen_buttons"
        android:text="@string/seach_page_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RGroup" />

</android.support.constraint.ConstraintLayout>